--- a/examples/filegen.yaml
+++ b/examples/filegen.yaml
@@ -6,5 +6,6 @@ files:
     output_path: 'user_{{ vars.local.user.id }}.yaml'
     vars:
       user:
-        id: 1
+        id: $USER_ID
         name: "John"
+        phone_number: 1234
